# bpod-rig

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
bpod_rig/: __main__.py
bpod_rig/IO/: __init__.py  default_setup.py
